# brain

./: .gitignore  README.md  constants.py  pyproject.toml  settings.py  train.py  utils.py
configs/: initial_alljoined_test.toml
configs/alljoined_isolated/: eegnet_1m_alljoined_isolated.toml  eegnet_alljoined_isolated.toml  eegnet_alljoined_isolated_category.toml  eegnet_alljoined_isolated_category_no_shuffle.toml  eegnet_alljoined_isolated_subject.toml  transformer_alljoined_isolated.toml  transformer_alljoined_isolated_category_num.toml  transformer_alljoined_isolated_subject.toml  transformer_alljoined_isolated_super_category.toml
configs/channel_masking/: alljoined_channel_v1_2025_12_17.toml
configs/classifier_testing/: big_super_category.toml  category.toml  category_aj_preprocessed.toml  ccnn_super_category.toml  ccnn_super_category_huge.toml  eeg_preprocessed_categorization.toml  eeg_super_category.toml  subject.toml  super_category.toml
configs/deap/: big_classifier_arousal.toml  big_classifier_valence.toml  ccnn_arousal.toml  ccnn_valence.toml  (+1 more)
data/: alljoined.py  builder.py  dataset.py  deap.py  things_eeg.py
eval/: check_classification.py  check_mse.py  check_regression.py  train_classify.py
models/: big_classifier.py  ccnn.py  classifiers.py  eegnet.py  et.py  linear_classifier.py  mae.py  nice_eeg.py  transformer.py  vit.py
notebooks/: alljoined_cleaning.ipynb  alljoined_meta.ipynb  data_exploration.ipynb  explore_alljoined.ipynb  explore_tuh.ipynb  inspect_checkpoint.ipynb  moabb.ipynb  siglip.ipynb  test_data.ipynb  test_norm_optim.ipynb  things_eeg_cleaning.ipynb  things_eeg_exploration.ipynb  things_object_separation.ipynb
scripts/: test_data.py  test_et.py  test_shapes.py  test_vit_shapes.py
viz/: data_inspector.py  deap_inspector.py  edf_channels.py  reconstruction.py
(+56 files in other folders)
