[project]
name = "brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.4.1",
    "huggingface-hub>=1.2.2",
    "ipykernel>=7.1.0",
    "mne>=1.11.0",
    "polars>=1.36.1",
    "pydantic>=2.12.5",
    "safetensors>=0.7.0",
    "streamlit>=1.52.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
