[project]
name = "brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "einops>=0.8.1",
    "huggingface-hub>=1.2.2",
    "ipykernel>=7.1.0",
    "mne>=1.11.0",
    "polars>=1.36.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "safetensors>=0.7.0",
    "streamlit>=1.52.1",
    "tokenizers>=0.22.1",
    "toml>=0.10.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=2.3.0",
]
