[project]
name = "brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "braindecode>=1.3.1",
    "datasets>=4.4.1",
    "einops>=0.8.1",
    "gdown>=5.2.0",
    "huggingface-hub>=1.2.2",
    "ipykernel>=7.1.0",
    "mne>=1.11.0",
    "moabb>=1.4.3",
    "polars>=1.36.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "ray>=2.53.0",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.1",
    "tokenizers>=0.22.1",
    "toml>=0.10.2",
    "torch>=2.9.1",
    "torcheeg",
    "tqdm>=4.67.1",
    "transformers>=2.3.0",
    "wandb>=0.23.1",
]

[tool.uv.sources]
torcheeg = { git = "https://github.com/ironman5366/torcheeg.git" }
